--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -45,7 +45,7 @@
   color: #888;
 }
 
-button:focus-visible{
+button:focus-visible {
   outline: none !important;
 }
 
@@ -57,19 +57,28 @@ button:focus-visible{
   font-size: 0.875rem;
   line-height: 1.25rem;
   padding: 0.625rem 0.875rem;
+
   &:hover {
-    filter: drop-shadow(0 0 2em rgba(0,0,0,0.8));
-}
+    filter: drop-shadow(0 0 2em rgba(0, 0, 0, 0.8));
+  }
+
+  &.disabled {
+    color: GrayText;
+    background-color: #ddd;
+    background: #9d9d9d;
+    cursor: not-allowed;
+    pointer-events: none;
+  }
 }
 
-.button-outline{
+.button-outline {
   border: 1px solid #ffffff;
-    color: #ffffff;
-    font-weight: 600;
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-    padding: 0.625rem 0.875rem;
-    background: none;
+  color: #ffffff;
+  font-weight: 600;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  padding: 0.625rem 0.875rem;
+  background: none;
 }
 
 .loader {
@@ -87,7 +96,8 @@ button:focus-visible{
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
-} 
+}
