--- a/client/src/containers/PreferencePage/index.scss
+++ b/client/src/containers/PreferencePage/index.scss
@@ -5,6 +5,7 @@
     padding-top: 100px;
     display: flex;
     flex-direction: column;
+    overflow: scroll;
     .header {
         font-size: 50px;
         font-weight: bolder;
